# neviewer

./: .gitignore  README.md
src/: CMakeLists.txt  edf.cpp  edf.h  main.cpp  mainwindow.cpp  mainwindow.h
src/forms/: mainwindow.ui
